backend/Deployment/Deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/health-probe-status-codes: 200-499
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: cert-manager-global
    external-dns.alpha.kubernetes.io/hostname: booksharing-be.app.mddinternship.com
  labels:
    app: back
  name: back-ingres
spec:
  rules:
    - host: booksharing-be.app.mddinternship.com
      http:
        paths:
          - backend:
              service:
                name: back-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - booksharing-be.app.mddinternship.com
      secretName: booksharing-backend-db-tls
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: bsbackend
          image: nexus.tool.mddinternship.com/repository/booksharing_be:69137915
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: nexus-docker
